# Task_5

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
doc/: UML.txt
headers/: Document.h  Primitives.h
src/: functions.cpp
